--- a/register.config.json
+++ b/register.config.json
@@ -3,27 +3,32 @@
     "description": "standard-lesson-plan-service",
     "arguments": ["standard_lesson_plan"],
     "methods": [{
-      "description": "获取和发送验证码",
+      "description": "创建计划",
       "senecaCmd": "plan_create",
       "serviceMethod": "create",
       "static": false
     }, {
-      "description": "验证",
+      "description": "获取计划",
       "senecaCmd": "plan_read",
       "serviceMethod": "find",
       "static": false
     }, {
-      "description": "验证",
+      "description": "获取计划数量",
+      "senecaCmd": "plan_count",
+      "serviceMethod": "count",
+      "static": false
+    }, {
+      "description": "通过id获取计划",
       "senecaCmd": "plan_read_id",
       "serviceMethod": "findById",
       "static": false
     }, {
-      "description": "验证",
+      "description": "更改计划",
       "senecaCmd": "plan_update",
       "serviceMethod": "update",
       "static": false
     }, {
-      "description": "验证",
+      "description": "删除计划",
       "senecaCmd": "plan_delete",
       "serviceMethod": "delete",
       "static": false
