--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "bluebird": "^3.4.7",
     "glob": "^7.1.1",
     "lodash": "^4.17.4",
+    "moment": "^2.18.1",
     "mongoose": "^4.8.2",
     "mongoose-ttl": "0.0.3",
     "nconf": "^0.8.4",
