--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "nconf": "^0.8.4",
     "seneca": "^3.3.0",
     "urllib": "^2.20.0",
+    "xyj-consul": "0.0.3",
     "xyj-logger": "0.0.1"
   },
   "devDependencies": {
